--- a/research/research.html
+++ b/research/research.html
@@ -67,14 +67,14 @@
 <ul>
 <li>
 <i>Workshop paper:</i> D. Núñez-Fernández, L. Ballan, G. Jiménez-Avalos, J. Coronel, M. Zimic. `Using Capsule Neural Network to predict Tuberculosis in lens-free microscopic images'. HSYS Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
-[<a href="/research/2019%20-%20lxai%20at%20neurips%202019%20-%20prediction%20gaze%20direction%20using%20cnns%20for%20autism.pdf">PDF</a>] 
-[<a href="https://arxiv.org/abs/1911.05629">arXiv</a>] 
+[<a href="/research/none.pdf">PDF</a>] 
+[<a href="https://arxiv.org/none">arXiv</a>] 
 </li>
 <br/>	
 <li>
-<i>Workshop paper:</i> D. Núñez-Fernández, F. Porras-Barrientos, M. Vittet-Mondoñedo, R. H. Gilman, M. Zimic. `Prediction of gaze direction using Convolutional Neural Networks for Autism diagnosis'. LatinX in AI Research at NeurIPS 2019. Vienna, Austria. (2020) <br/>
-[<a href="/research/2019%20-%20lxai%20at%20neurips%202019%20-%20prediction%20gaze%20direction%20using%20cnns%20for%20autism.pdf">PDF</a>] 
-[<a href="https://arxiv.org/abs/1911.05629">arXiv</a>] 
+<i>Workshop paper:</i> D. Núñez-Fernández, L. Ballan, G. Jiménez-Avalos, J. Coronel, M. Zimic. `Automatic semantic segmentation for prediction of tuberculosis using lens-free microscopy images'. ML for Global Health Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
+[<a href="/research/none.pdf">PDF</a>] 
+[<a href="https://arxiv.org/none">arXiv</a>] 
 </li>
 <br/>
 <li>
@@ -179,7 +179,7 @@
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-07-2020 06:56 GMT <br/> 
+Website updated 06-07-2020 06:59 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
