--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p align="justify" style="text-indent:0"> 
 <!-- <img style="float: left; margin: 15px 20px 10px 0px;" src="/dennishnf-photo.jpg" alt="90" width="142" height="142" /> 
 <p align="justify" style="text-indent:0"> -->
-Currently, I'm a research assistant at Bioinformatics and Molecular Biology Laboratory at Universidad Peruana Cayetano Heredia (UPCH), Peru. There, I develop Artificial Intelligence algorithms for early medical diagnosis. I obtained my bachelor degree in Science with mention in Electronic Engineering from the Universidad Nacional de Ingeniería (UNI), Peru, and ranked first in my graduating class. My research experience includes two research fellowships in Artificial Intelligence at AGH University of Science and Technology (Poland) and the University of Padova (Italy).
+Currently, I'm a research assistant at Bioinformatics and Molecular Biology Laboratory at Universidad Peruana Cayetano Heredia (UPCH), Peru. There, I develop Artificial Intelligence algorithms for early medical diagnosis. I obtained my bachelor degree in Science with mention in Electronic Engineering from the Universidad Nacional de Ingeniería (UNI), Peru, and ranked first in my graduating class. My research experience includes two research fellowships in Artificial Intelligence & Deep Learning at the AGH University of Science and Technology (Poland) and the University of Padova (Italy).
 <br/>
 <br/>
 I have participated in in prestigious conferences such as the ICML 2019 (USA), the NeurIPS 2019 (Canada) and the ICML 2020 (Austria). I will participate in top schools like the 10th Lisbon Machine Learning School (LxMLS 2020) and the Cornell, Maryland, Max Planck Pre-doctoral Research School (CMMRS 2020). Also, my academic service includes participation as commite member in the role of reviewer for LXAI Workshop at NeurIPS (2019) and LXAI Workshop at ICML (2020).
@@ -142,7 +142,7 @@ I have participated in in prestigious conferences such as the ICML 2019 (USA), t
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-07-2020 08:27 GMT <br/> 
+Website updated 06-07-2020 08:28 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
