--- a/research/research.html
+++ b/research/research.html
@@ -67,14 +67,14 @@
 <ul>
 <li>
 <i>Workshop paper:</i> D. Núñez-Fernández, L. Ballan, G. Jiménez-Avalos, J. Coronel-Herrera, M. Zimic-Peralta. `Automatic semantic segmentation for prediction of tuberculosis using lens-free microscopy images'. ML for Global Health Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
-[<a href="/research/none.pdf">PDF</a>] 
-[<a href="https://arxiv.org/none">arXiv</a>] 
+[<a href="/research/2020 %20%20ml4gh%20at%20icml%202020%20-%20segmentation%20for%20prediction%20of%20tuberculosis.pdf">PDF</a>] 
+[<a href="https://arxiv.org/abs/2007.02482">arXiv</a>] 
 </li>
 <br/>	
 <li>
 <i>Workshop paper:</i> D. Núñez-Fernández, L. Ballan, G. Jiménez-Avalos, J. Coronel-Herrera, M. Zimic-Peralta. `Using Capsule Neural Network to predict Tuberculosis in lens-free microscopic images'. HSYS Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
-[<a href="/research/none.pdf">PDF</a>] 
-[<a href="https://arxiv.org/none">arXiv</a>] 
+[<a href="/research/2020%20-%20hsys%20at%20icml%202020%20-%20capsule%20neural%20network%20for%20tuberculosis%20detection.pdf">PDF</a>] 
+[<a href="https://arxiv.org/abs/2007.02457">arXiv</a>] 
 </li>
 <br/>
 <li>
@@ -179,7 +179,7 @@
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 07-07-2020 18:24 GMT <br/> 
+Website updated 07-07-2020 18:31 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
