--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <br/>
 <h2>About me</h2>
 <p>
-<img style="float: right; margin: 15px 0px 10px 20px;" src="/dennishnf-photo.jpg" alt="90" width="142" height="142" /> 
+<img style="float: right; margin: 15px 0px 10px 20px;" src="/dennishnf-photo1.jpg" alt="90" width="142" height="142" /> 
 <p align="justify" style="text-indent:0"> 
 <!-- <img style="float: left; margin: 15px 20px 10px 0px;" src="/dennishnf-photo.jpg" alt="90" width="142" height="142" /> 
 <p align="justify" style="text-indent:0"> -->
@@ -144,7 +144,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 07-07-2020 18:50 GMT <br/> 
+Website updated 09-07-2020 08:02 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
