--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 Currently, I'm a research assistant at the Bioinformatics and Molecular Biology Laboratory at Universidad Peruana Cayetano Heredia (UPCH), Peru. There, I develop Artificial Intelligence algorithms for early and low-cost medical diagnosis. I obtained my bachelor degree in Science with a mention in Electronic Engineering from the Universidad Nacional de Ingeniería (UNI), Peru, and ranked first in my graduating class. My research experience includes two research fellowships in Artificial Intelligence & Deep Learning at the AGH University of Science and Technology (Poland) and the University of Padova (Italy).
 <br/>
 <br/>
-I have participated in prestigious AI related conferences such as the ICML 2019 (USA), the NeurIPS 2019 (Canada), the ICML 2020 (Austria), the ACL 2020 (USA) and the RSS 2020 (USA). Also, I have participated in important schools such as the 10th Lisbon Machine Learning School - LxMLS 2020 (Portugal) and the Cornell, Maryland, Max Planck Pre-doctoral Research School - CMMRS 2020 (Germany). My academic service experience includes participation as a committee member in the role of reviewer for the LXAI Workshop at NeurIPS (2019) and the LXAI Workshop at ICML (2020). In addition to my interest and work in Artificial Intelligence, I have a special interest in science fiction & technology related books, and attraction for topics about the impact and future of science and technology.
+I have participated in prestigious AI related conferences such as the ICML 2019 (USA), the NeurIPS 2019 (Canada), the ICML 2020 (Austria), the ACL 2020 (USA) and the RSS 2020 (USA). Also, I have participated in important schools such as the 10th Lisbon Machine Learning School - LxMLS 2020 (Portugal) and the Cornell, Maryland, Max Planck Pre-doctoral Research School - CMMRS 2020 (Germany). My academic service experience includes participation as a committee member in the role of reviewer for the LXAI Workshop at NeurIPS (2019) and the LXAI Workshop at ICML (2020). In addition to my interest and work in Artificial Intelligence, I have a special interest in books related to science fiction & technology, and attraction for topics about the impact and future of science and technology.
 </p>
 </p>
 <br/>
@@ -145,7 +145,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 25-07-2020 23:10 GMT <br/> 
+Website updated 25-07-2020 23:12 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
