--- a/cv/cv.html
+++ b/cv/cv.html
@@ -66,12 +66,12 @@
 <br/>
 <h3>CV in English:</h3>
 <p> 
-&nbsp &nbsp [<a href="CV-DennisNúñezFernández-english.pdf">CV-DennisNúñezFernández-english.pdf</a>]
+&nbsp &nbsp [<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]
 </p>
 <br/>
 <h3>CV in Spanish:</h3>
 <p> 
-&nbsp &nbsp [<a href="CV-DennisNúñezFernández-spanish.pdf">CV-DennisNúñezFernández-spanish.pdf</a>]
+&nbsp &nbsp [<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]
 </p>
 <br/>
 
@@ -98,7 +98,7 @@
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 04-08-2020 07:43 GMT <br/> 
+Website updated 14-08-2020 04:34 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
