--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2020/03 - Glad to obtain a grant for the School of AI programme 2020, hosted by Pi School</li>
 <li>2020/01 - <a href="http://ailatinsum.mit.edu/">Selected as a winner of the AI Latin America SumMIT, held at the MIT Media Lab</a></li>
 <li>2019/11 - Selected by Fondecyt Peru for a research stay at the University of Padua, Italy</li>
-<li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry, at UNMSM</li>
+<li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry, at the UNMSM</li>
 <li>2019/10 - Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019</li>
 <li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters">My 3 submitted abstracts were accepted for the LXAI Workshop at NeurIPS 2019</a></li>
 <li>2019/10 - Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</li>
@@ -146,7 +146,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 21-08-2020 08:25 GMT <br/> 
+Website updated 21-08-2020 08:26 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
