--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2019/11 - Selected by Fondecyt Peru for a research stay at the University of Padua, Italy</li>
 <li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry, at the UNMSM</li>
 <li>2019/10 - Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019</li>
-<li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters">My 3 submitted abstracts were accepted for the LXAI Workshop at NeurIPS 2019</a></li>
+<li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters">My 3 submitted abstracts were accepted for the LXAI Workshop at the NeurIPS 2019</a></li>
 <li>2019/10 - Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</li>
-<li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org">Selected as program committee member (reviewer) for the LXAI Workshop at NeurIPS 2019</a></li>
+<li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org">Selected as program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2019</a></li>
 <li>2019/09 - Invited to give a talk at the 22vo Meetup 2019, Data Science Research Perú</li>
 <li>2019/09 - Glad to give a talk about a UPCH project at 'Innova como ellos' event, at Innóvate Perú</li>
 <li>2019/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding">My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</a></li>
@@ -146,7 +146,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 21-08-2020 08:27 GMT <br/> 
+Website updated 21-08-2020 08:29 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
