--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a></li>
 <li>2020/05 - Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</li>
 <li>2020/03 - Included as program committee member (reviewer) for the IEEE INTERCON 2020</li>
-<li>2020/03 - Selected to participate in the Cornell, Maryland, Max Planck Pre-doctoral School 2020</li>
+<li>2020/03 - Selected to participate in the CMMRS 2020: Cornell, Maryland, Max Planck Pre-doctoral School</li>
 <li>2020/03 - Glad to obtain a grant for the School of AI programme 2020, hosted by Pi School</li>
 <li>2020/01 - <a href="http://ailatinsum.mit.edu/">Selected as a winner of the AI Latin America SumMIT, held at the MIT Media Lab</a></li>
 <li>2019/11 - Selected by Fondecyt Peru for a research stay at the University of Padua, Italy</li>
@@ -146,7 +146,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 21-08-2020 08:32 GMT <br/> 
+Website updated 21-08-2020 08:34 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
