--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8484861/proceeding">My submitted paper was accepted for the IEEE INTERCON 2018 conference</a></li>
 <li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html">My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for the CIARP 2017</a></li>
 <li>2016/11 - <a href="http://www.unesco.agh.edu.pl/fileadmin/default/templates/css/j/unesco/system/program_UCTE_2016_v12_2016_12_06x.pdf">Selected as paper presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a></li>
-<li>2016/06 - Selected for a fellowship under the UNESCO/Poland Co-Sponsored Program at the AGH UST, Poland</li>
+<li>2016/06 - Selected for a fellowship under the UNESCO/Poland Co-Spons. Program at the AGH UST, Poland</li>
 <li>2015/07 - Graduated with the 1st place in my graduating class at Universidad Nacional de Ingeniería - UNI</li>
 </ul>
 </p>
@@ -146,7 +146,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 21-08-2020 08:44 GMT <br/> 
+Website updated 21-08-2020 08:45 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
