--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <ul>
 <li>2020/08 - Winner of a scholarship for the Advanced Program in Data Science & Global Skills, hosted by MIT.</li>
 <li>2020/08 - Included as a program committee member (reviewer) for the IEEE EIRCON 2020.</li>
-<li>2020/08 - Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining</li>
-<li>2020/07 - Invited by IEEE SPS UNI to give a workshop: "Deep Learning: Fundamentos y Aplicaciones"</li>
+<li>2020/08 - Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining.</li>
+<li>2020/07 - Invited by IEEE SPS UNI to give a workshop: "Deep Learning: Fundamentos y Aplicaciones".</li>
 <li>2020/07 - Invited by my faculty FIEE UNI to give a talk about my experience in research internships abroad.</li>
 <li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers">My third paper was selected for poster presentation at HSYS workshop at the ICML 2020</a>.</li>
 <li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/">My two papers were accepted for oral & poster presentation at ML4GH workshop at the ICML 2020</a>.</li>
@@ -150,7 +150,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 05-09-2020 10:31 GMT <br/> 
+Website updated 05-09-2020 10:32 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
