--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/09 - Starting the MITx MicroMasters in Statistics and Data Science, funded by Aporta.</li>
+<li>2020/09 - Cheerful to starting the MITx MicroMasters in Statistics and Data Science, funded by Aporta.</li>
 <li>2020/08 - Winner of a scholarship for the Advanced Program in Data Science & Global Skills, hosted by MIT.</li>
 <li>2020/08 - Included as a program committee member (reviewer) for the IEEE EIRCON 2020.</li>
 <li>2020/08 - Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining.</li>
@@ -151,7 +151,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-09-2020 07:03 GMT <br/> 
+Website updated 06-09-2020 07:06 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
