--- a/research/research.html
+++ b/research/research.html
@@ -75,31 +75,31 @@
 <h3>Conference Proceedings</h3>
 <ul>
 <li>
-<i>Conference paper:</i> D. Núñez Fernández. `Development of a hand pose recognition system on an embedded computer using Artificial Intelligence'. INTERCON 2019. Lima, Peru. (2019) <br/>
+D. N´u˜nez-Fern´andez. ‘Development of a hand pose recognition system on an embedded computer using Artificial Intelligence’. XXVI International Conf. on Electronics, Electrical Eng. and Computing INTERCON. Lima, Peru. (2019) <br/>
 [<a href="/research/2019%20-%20intercon%202019%20-%20hand%20pose%20on%20embedded%20computer%20using%20ai.pdf">PDF</a>] 
 [<a href="https://ieeexplore.ieee.org/document/8853573">IEEE Xplore</a>] 
 </li>
 <br/>
 <li>
-<i>Conference paper:</i> D. Núñez Fernández. `Implementation of a WiFi-based indoor location system on a mobile device for a university area'. INTERCON 2019. Lima, Peru. (2019) <br/>
+D. N´u˜nez-Fern´andez. ‘Implementation of a WiFi-based indoor location system on a mobile device for a university area’. XXVI International Conf. on Electronics, Electrical Eng. and Computing INTERCON. Lima, Peru. (2019) <br/>
 [<a href="2019%20-%20intercon%202019%20-%20wifi%20indoor%20location%20on%20mobile%20device%20for%20university.pdf">PDF</a>] 
 [<a href="https://ieeexplore.ieee.org/document/8853556">IEEE Xplore</a>] 
 </li>
 <br/>
 <li>
-<i>Conference paper:</i> D. Núñez Fernández. `Multi-subject continuous emotional states monitoring by using Convolutional Neural Networks'. XPOTRON 2019. Arequipa, Peru. (2019) <br/> 
+D. N´u˜nez-Fern´andez. ‘Multi-subject continuous emotional states monitoring by using Convolutional Neural Networks’. International Conference on Control of Dynamical and Aerospace Systems XPOTRON 2019. Arequipa, Peru. (2019) <br/> 
 [<a href="/research/2019%20-%20xpotron%202019%20-%20multi-subject%20emotional%20states%20monitoring.pdf">PDF</a>]
 [<a href="https://ieeexplore.ieee.org/document/8705963">IEEE Xplore</a>]
 </li>
 <br/>
 <li>
-<i>Conference paper:</i> D. Núñez Fernández, S. Hosseini. `Real-time handwritten letters recognition on an embedded computer using ConvNets'. SHIRCON 2018. Lima, Peru. (2018) <br/> 
+D. N´u˜nez-Fern´andez, S. Hosseini. ‘Real-time handwritten letters recognition on an embedded computer using ConvNets’. Sciences and Humanities International Research Conference SHIRCON 2018. Lima, Peru. (2018) <br/> 
 [<a href="/research/2018%20-%20shircon%202018%20-%20real-time%20handwritten%20letters%20recognition.pdf">PDF</a>]
 [<a href="https://ieeexplore.ieee.org/document/8592981">IEEE Xplore</a>]
 </li>
 <br/>
 <li>
-<i>Conference paper:</i> D. Núñez Fernández. `A Real-Time Recognition System for User Characteristics Based on Deep Learning'. INTERCON 2018. Lima, Peru. (2018) <br/> 
+D. N´u˜nez-Fern´andez. ‘A Real-Time Recognition System for User Characteristics Based on Deep Learning’. XXV International Conf. on Electronics, Electrical Eng. and Computing INTERCON 2018. Lima, Peru. (2018) <br/> 
 [<a href="/research/2018%20-%20intercon%202018%20-%20real-time%20recognition%20for%20user%20characteristics.pdf">PDF</a>] 
 [<a href="https://ieeexplore.ieee.org/document/8526381">IEEE Xplore</a>] 
 </li>
@@ -107,25 +107,25 @@
 <h3>Book chapters</h3>
 <ul>
 <li>
-<i>Book chapter:</i> A. Aspilcueta Narvaez, D. Núñez Fernández, S. Gamarra Quispe, D. Lazo Ochoa. `Smart Campus IoT guidance system for visitors based on Bayesian filters'. BTSym 2019. Lima, Peru. (2019) <br/>
+A. Aspilcueta Narvaez, D. N´u˜nez-Fern´andez, S. Gamarra Quispe, D. Lazo Ochoa. ‘Smart Campus IoT guidance system for visitors based on Bayesian filters’. Brazilian Technology Symposium BTSym 2019. Lima, Peru. (2019) <br/>
 [<a href="/research/2019%20-%20btsym 2019%20-%20iot%20guidance%20system%20based%20on%20bayesian%20filters.pdf">PDF</a>] 
 [<a href="https://doi.org/10.1007/978-3-030-57566-3_46">Springer</a>] 
 </li>
 <br/>
 <li> 
-<i>Book chapter:</i> D. Núñez Fernández. `Development of a hand gesture based control interface using Deep Learning'. SIMBig 2019. Lima, Peru. (2019) <br/>
+D. N´u˜nez-Fern´andez. ‘Development of a hand gesture based control interface using Deep Learning’. International Conference on Information Management and Big Data SIMBig 2019. Lima, Peru. (2019) <br/>
 [<a href="/research/2019%20-%20simbig%202019%20-%20development%20of%20a%20hand%20gesture%20interface.pdf">PDF</a>] 
 [<a href="https://link.springer.com/chapter/10.1007%2F978-3-030-46140-9_14">Springer</a>] 
 </li>
 <br/>
 <li> 
-<i>Book chapter:</i> D. Núñez Fernández. `Implementation of an indoor location system for mobile-based museum guidance'. SIMBig 2019. Lima, Peru. (2019) <br/>
+D. N´u˜nez-Fern´andez. ‘Implementation of an indoor location system for mobile-based museum guidance’. International Conference on Information Management and Big Data SIMBig 2019. Lima, Peru. (2019) <br/>
 [<a href="/research/2019%20-%20simbig%202019%20-%20implementation%20of%20an%20indoor%20location%20system%20museum.pdf">PDF</a>] 
 [<a href="https://link.springer.com/chapter/10.1007%2F978-3-030-46140-9_7">Springer</a>] 
 </li>
 <br/>
 <li> 
-<i>Book chapter:</i> D. Núñez Fernández, B. Kwolek. `Hand Posture Recognition Using Convolutional Neural Network'. CIARP 2017. Valparaiso, Chile. (2017) <br/> 
+D. N´u˜nez-Fern´andez, B. Kwolek. ‘Hand Posture Recognition Using Convolutional Neural Network’. 22nd Iberoamerican Congress on Pattern Recognition CIARP 2017. Valparaiso, Chile. (2017) <br/> 
 [<a href="/research/2018%20-%20ciarp%202017%20-%20hand%20posture%20recognition%20using%20cnn.pdf">PDF</a>]
 [<a href="https://link.springer.com/chapter/10.1007/978-3-319-75193-1_53">Springer</a>]
 </li>
@@ -192,7 +192,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 12-02-2021 00:49 GMT <br/> 
+Website updated 12-02-2021 00:54 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
