--- a/cv/cv.html
+++ b/cv/cv.html
@@ -64,14 +64,15 @@
 <br/>
 <h2>Curriculum Vitae</h2>
 <br/>
-<h3>CV in English</h3>
-<ul> 
-<li>[<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]</li>
-</ul>
-<h3>CV in Spanish</h3>
-<ul> 
-<li>[<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]</li>
-</ul>
+<h3>CV in English:</h3>
+<p> 
+&nbsp &nbsp [<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]
+</p>
+<br/>
+<h3>CV in Spanish:</h3>
+<p> 
+&nbsp &nbsp [<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]
+</p>
 <br/>
 
 <br/>
@@ -97,7 +98,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 12-02-2021 01:32 GMT <br/> 
+Website updated 12-02-2021 01:35 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
